--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: python
 python:
   - 2.7
   - 3.2
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq libpcre3
 install:
   - pip install -r requirements/testing.txt -r requirements/production.txt --use-mirrors
   - python setup.py install
