--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,12 @@ language: python
 python:
   - 2.7
   - 3.2
-before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq libpcre3
+#before_install:
+#  - sudo apt-get update -qq
+#  - sudo apt-get install -qq libpcre3
 install:
-  - python setup.py install
+  - python -m yara.scan -h
+#  - python setup.py install
 script: python setup.py test
 notifications:
     email: mjdorma+travis-ci@gmail.com
