--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: python
 python:
   - 2.7
-  - 3.2
+#  - 3.2
 #before_install:
 #  - sudo apt-get update -qq
 #  - sudo apt-get install -qq libpcre3
 install:
   - python -m yara.scan -h
-#  - python setup.py install
 script: python setup.py test
+#script: python setup.py test
 notifications:
     email: mjdorma+travis-ci@gmail.com
 
