--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ python:
 #  - sudo apt-get update -qq
 #  - sudo apt-get install -qq libpcre3
 install:
-  - python -m yara.scan -h
-script: python setup.py test
+  - python setup.py install 
+script: python -m yara.scan -h
 #script: python setup.py test
 notifications:
     email: mjdorma+travis-ci@gmail.com
