--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,11 @@
 language: python
 python:
+  - 2.6
   - 2.7
   - 3.2
-before_install:
-#  - sudo apt-get update -qq
-  - sudo apt-get install -qq libpcre3
+  - "pypy"
 install:
   - python setup.py install 
 script: python setup.py test
 notifications:
     email: mjdorma+travis-ci@gmail.com
-
