--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ python:
   - 2.6
   - 2.7
   - 3.2
-  - "pypy"
+  - 3.3
+#  - "pypy"
 install:
   - python setup.py install 
 script: python setup.py test
