--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python:
   - 3.2
   - 3.3
 install:
+  - sudo rm -rf /dev/shm && sudo ln -s /run/shm /dev/shm
   - python setup.py install 
 script: python setup.py test
 notifications:
