--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
-language: python
-python:
-  - 2.6
-  - 2.7
-  - 3.2
-  - 3.3
-install:
-  - sudo rm -rf /dev/shm && sudo ln -s /run/shm /dev/shm
-  - python setup.py install 
-script: python setup.py test
-notifications:
-    email: mjdorma+travis-ci@gmail.com
+#language: python
+#python:
+#  - 2.6
+#  - 2.7
+#  - 3.2
+#  - 3.3
+#install:
+#  - sudo rm -rf /dev/shm && sudo ln -s /run/shm /dev/shm
+#  - python setup.py install 
+#script: python setup.py test
+#notifications:
+#    email: mjdorma+travis-ci@gmail.com
